# UFO_Torrent

./: #TODO.xlsx  .gitignore  123.torrent  2.torrent  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Doxyfile  LICENSE  README.md  YaP.torrent  [FreeTP.Org]REPO-v0.1.2-by-Pioneer.torrent  conandata.yml  conanfile.py  conanfile.txt  example.torrent  q  test_folder  ufo-torrent.deb
docs/: project_description.md  ufo-torrent.1
includes/: createHash.h  decode.h  encode.h  fileUtils.h  ncurses_utils.h  prettyPrinter.h  torrentFile.h  ufo_torrent.h  valueTypes.h
includes/network_part/: BitTorrentMessage.h  Block.h  PeerConnection.h  PeerRetriever.h  Piece.h  PieceManager.h  SharedQueue.h  TorrentClient.h  TorrentFileParser.h  connect.h  utils.h
libs/bencode/: BDictionary.cpp  BDictionary.h  BInteger.h  BItem.h  BItemVisitor.h  BList.h  BString.h  Decoder.cpp  Decoder.h  Encoder.h  PrettyPrinter.h  Utils.h  bencoding.h
libs/crypto/: sha1.h
src/: CMakeLists.txt  main.cpp  ncurses_utils.cpp  ufo_torrent.cpp
src/bencode/: decode.cpp  decode.h  encode.cpp  prettyPrinter.cpp  prettyPrinter.h  valueTypes.h
src/hashing/: createHash.cpp
src/models/: torrentFile.cpp
src/network_part/: BitTorrentMessage.cpp  CMakeLists.txt  PeerConnection.cpp  PeerRetriever.cpp  Piece.cpp  PieceManager.cpp  TorrentClient.cpp  TorrentFileParser.cpp  connect.cpp  utils.cpp
src/utils/: fileUtils.cpp
tests/: CMakeLists.txt  test.cpp  testDecoder.cpp  testEncoder.cpp  testPiece.cpp  testPrinter.cpp
torrent/DEBIAN/: control  install  postinst
ufo_torrent/: CMakeLists.txt  main.cpp  ufo_torrent.cpp
ufo_torrent_tests/: CMakeLists.txt  test.cpp  ufo_torrent_tests.vcxproj
